<?xml version="1.0" encoding="utf-8"?><!--
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/brand"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/app_name_text_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size"
            android:typeface="serif" />

        <LinearLayout
            android:id="@+id/loginlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAppName"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/login_layout_marginTop"
            android:orientation="vertical"
            android:padding="@dimen/login_layout_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/myExperimentIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/my_experiment_logo_height"
                    android:layout_gravity="center"
                    android:padding="@dimen/login_info_padding"
                    android:src="@drawable/myexlogo" />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_layout_email_margin">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/layout_padding"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_layout_marginTop"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/layout_padding"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/checkbox_margin_top"
                android:checked="true"
                android:text="@string/keeplogin" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_height"
                android:layout_marginBottom="@dimen/login_button_margin_bottom"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:background="@drawable/login_button"
                android:contentDescription="@string/login_button_description"
                android:text="@string/bLogin"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bRegister"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_height"
                android:layout_marginTop="@dimen/signup_margin_top"
                android:text="@string/create_an_account"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/disc_margin_top"
                android:gravity="center"
                android:text="@string/disclaimer_title"
                android:textAlignment="center"
                android:textSize="@dimen/disc_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/disclaimer_content"
                android:textAlignment="center"
                android:textSize="@dimen/disc_text_size" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>