...
    <string name="err_login_password">Enter valid password</string>
    <string name="error_failed_to_fetch_workflow">Failed to fetch Workflow</string>
    <string name="no_more_workflows_avialable">No more workflows avialable</string>
    <string name="no_workflows_found">No Workflows Found</string>

    <string name="no_my_workflow">You have not created any workflow yet !</string>
    <string name="error_vaild_credential">Please enter valid credential</string>
    <string name="t2_workflow_type">Taverna 2</string>


    <string-array name="player_run_slider_view_labels">
        <item>Player \nLogin</item>
        <item>Download</item>
...
